--- a/frontend/angular-project-j2ee/src/app/shared/main-layout/main-layout.component.html
+++ b/frontend/angular-project-j2ee/src/app/shared/main-layout/main-layout.component.html
@@ -1,7 +1,11 @@
-<app-navbar></app-navbar>
+<app-navbar></app-navbar> <!-- Navbar en haut -->
+
 <div class="layout">
+  <!-- Sidebar à gauche -->
   <app-sidebar></app-sidebar>
+  
+  <!-- Contenu principal -->
   <main class="content">
-    <router-outlet></router-outlet>
+    <router-outlet></router-outlet> <!-- Zone d'injection des pages spécifiques -->
   </main>
 </div>
