--- a/frontend/angular-project-j2ee/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/angular-project-j2ee/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,13 @@
-<p>sidebar works!</p>
+<div class="sidebar">
+    <div class="sidebar-header">
+      <h3>Dashboard</h3>
+    </div>
+    <ul class="sidebar-links">
+      <li><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
+      <li><a routerLink="/equipement" routerLinkActive="active">Équipements</a></li>
+      <li><a routerLink="/utilisateurs" routerLinkActive="active">Utilisateurs</a></li>
+      <li><a routerLink="/statistiques" routerLinkActive="active">Statistiques</a></li>
+      <li><a routerLink="/parametres" routerLinkActive="active">Paramètres</a></li>
+    </ul>
+  </div>
+  
